--- a/.github/workflows/build-media3-av1-decoder.yml
+++ b/.github/workflows/build-media3-av1-decoder.yml
@@ -1,4 +1,4 @@
-name: build-media3-decoder-ffmpeg-av1
+name: build-media3-av1-decoder
 
 on:
   workflow_dispatch:  # 允许手动触发
@@ -6,18 +6,13 @@ on:
 env:
   # 配置版本变量
   ANDROID_NDK_VERSION: '27.1.11718014'
-  FFMPEG_VERSION: '6.0'  # 使用FFmpeg 6.0
   ANDROID_ABI: '21'      # 最小API级别
   BUILD_TYPE: 'Release'
   HOST_PLATFORM: 'linux-x86_64'  # GitHub Actions运行器平台
-  
-  # 解码器配置
-  ENABLED_DECODERS: 'vorbis opus flac aac mp3'  # 启用的FFmpeg解码器
 
 jobs:
-  build-extensions:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout actions repository
       uses: actions/checkout@main
@@ -47,7 +42,6 @@ jobs:
         
         # 设置模块路径（与README中的说明一致）
         echo "AV1_MODULE_PATH=$(pwd)/libraries/decoder_av1/src/main" >> $GITHUB_ENV
-        echo "FFMPEG_MODULE_PATH=$(pwd)/libraries/decoder_ffmpeg/src/main" >> $GITHUB_ENV
         
     - name: Install build dependencies
       run: |
@@ -195,66 +189,6 @@ jobs:
           exit 1
         fi
         
-    - name: Build ffmpeg extension
-      id: build-ffmpeg
-      run: |
-        set -e
-        cd $FFMPEG_MODULE_PATH/jni
-        
-        echo "=== Step 1: Clone FFmpeg ==="
-        FFMPEG_SRC="ffmpeg"
-        if [ ! -d "$FFMPEG_SRC" ]; then
-          echo "Cloning FFmpeg $FFMPEG_VERSION..."
-          git clone --depth 1 git://source.ffmpeg.org/ffmpeg $FFMPEG_SRC
-          cd $FFMPEG_SRC
-          git checkout release/$FFMPEG_VERSION
-          cd ..
-        else
-          echo "FFmpeg already exists, updating..."
-          cd $FFMPEG_SRC
-          git fetch origin release/$FFMPEG_VERSION
-          git checkout release/$FFMPEG_VERSION
-          cd ..
-        fi
-        
-        echo "=== Step 2: Set NDK path ==="
-        if [ -n "$ANDROID_HOME" ]; then
-          NDK_PATH="$ANDROID_HOME/ndk/$ANDROID_NDK_VERSION"
-        elif [ -n "$ANDROID_NDK_HOME" ]; then
-          NDK_PATH="$ANDROID_NDK_HOME"
-        else
-          echo "ERROR: NDK not found!"
-          exit 1
-        fi
-        
-        echo "NDK_PATH: $NDK_PATH"
-        
-        echo "=== Step 3: Make build script executable ==="
-        chmod +x build_ffmpeg.sh
-        
-        echo "=== Step 4: Build FFmpeg ==="
-        # 将解码器字符串转换为数组
-        IFS=' ' read -ra DECODER_ARRAY <<< "$ENABLED_DECODERS"
-        
-        echo "Building FFmpeg with decoders: ${DECODER_ARRAY[@]}"
-        
-        ./build_ffmpeg.sh \
-          "$FFMPEG_MODULE_PATH" \
-          "$NDK_PATH" \
-          "$HOST_PLATFORM" \
-          "$ANDROID_ABI" \
-          "${DECODER_ARRAY[@]}"
-        
-        echo "=== Step 5: Verify FFmpeg build ==="
-        if [ -d "ffmpeg" ]; then
-          echo "✓ FFmpeg library built successfully"
-          # 检查FFmpeg库文件
-          find . -name "*.a" | head -10
-        else
-          echo "✗ FFmpeg build failed"
-          exit 1
-        fi
-        
     - name: Build aar files with gradle
       id: build-aar
       run: |
@@ -267,130 +201,35 @@ jobs:
         echo "=== Step 2: Build AV1 AAR ==="
         ./gradlew :media3-decoder-av1:assemble$BUILD_TYPE \
           -Pandroidx.enableComposeCompilerReports=true
-        
-        echo "=== Step 3: Build FFmpeg AAR ==="
-        ./gradlew :media3-decoder-ffmpeg:assemble$BUILD_TYPE \
-          -Pandroidx.enableComposeCompilerReports=true
-        
-        echo "=== Step 4: Verify AAR files ==="
+               
+        echo "=== Step 3: Verify AAR files ==="
         echo "Checking for generated AAR files..."
         
         AV1_AAR_PATH="libraries/decoder_av1/build/outputs/aar"
-        FFMPEG_AAR_PATH="libraries/decoder_ffmpeg/build/outputs/aar"
         
         if [ -f "$AV1_AAR_PATH/decoder_av1-$BUILD_TYPE.aar" ]; then
-          echo "✓ AV1 AAR found: $AV1_AAR_PATH/decoder_av1-$BUILD_TYPE.aar"
+          echo "AV1 AAR found: $AV1_AAR_PATH/decoder_av1-$BUILD_TYPE.aar"
           ls -lh "$AV1_AAR_PATH/"
         else
-          echo "✗ AV1 AAR not found"
+          echo "AV1 AAR not found"
           # 尝试查找任何AAR文件
           find "$AV1_AAR_PATH" -name "*.aar" 2>/dev/null || true
-        fi
-        
-        if [ -f "$FFMPEG_AAR_PATH/decoder_ffmpeg-$BUILD_TYPE.aar" ]; then
-          echo "✓ FFmpeg AAR found: $FFMPEG_AAR_PATH/decoder_ffmpeg-$BUILD_TYPE.aar"
-          ls -lh "$FFMPEG_AAR_PATH/"
-        else
-          echo "✗ FFmpeg AAR not found"
-          # 尝试查找任何AAR文件
-          find "$FFMPEG_AAR_PATH" -name "*.aar" 2>/dev/null || true
         fi
         
     - name: Upload build artifacts
       uses: actions/upload-artifact@main
       with:
-        name: media3-extensions-aar
+        name: media3-av1-decoder
         path: |
           ${{ env.MEDIA_PATH }}/libraries/decoder_av1/build/outputs/aar/*.aar
-          ${{ env.MEDIA_PATH }}/libraries/decoder_ffmpeg/build/outputs/aar/*.aar
         retention-days: 30
         if-no-files-found: error
         
     - name: Create github release & upload apk
       uses: softprops/action-gh-release@master
       with:
-        tag_name: ${{ env.BUILD_DATE }}-media3-decoder
+        tag_name: tag_name: ${{env.BV_DATE}}-av1lib
         files: |
           ${{ env.MEDIA_PATH }}/libraries/decoder_av1/build/outputs/aar/*.aar
-          ${{ env.MEDIA_PATH }}/libraries/decoder_ffmpeg/build/outputs/aar/*.aar
         draft: false
         prerelease: false
-          
-    - name: Create build summary
-      if: always()
-      run: |
-        echo "# Media3 Extensions Build Report" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## Build Information" >> $GITHUB_STEP_SUMMARY
-        echo "- **Build Date**: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_STEP_SUMMARY
-        echo "- **NDK Version**: ${{ env.ANDROID_NDK_VERSION }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **FFmpeg Version**: ${{ env.FFMPEG_VERSION }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Android ABI**: ${{ env.ANDROID_ABI }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Enabled Decoders**: ${{ env.ENABLED_DECODERS }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        
-        echo "## Build Status" >> $GITHUB_STEP_SUMMARY
-        
-        # 检查各步骤状态
-        echo "| Step | Status |" >> $GITHUB_STEP_SUMMARY
-        echo "|------|--------|" >> $GITHUB_STEP_SUMMARY
-        
-        if [ "${{ steps.build-av1.outcome }}" = "success" ]; then
-          echo "| AV1 Library Build | ✅ Success |" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "| AV1 Library Build | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        if [ "${{ steps.build-ffmpeg.outcome }}" = "success" ]; then
-          echo "| FFmpeg Library Build | ✅ Success |" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "| FFmpeg Library Build | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        if [ "${{ steps.build-aar.outcome }}" = "success" ]; then
-          echo "| AAR Generation | ✅ Success |" >> $GITHUB_STEP_SUMMARY
-        else
-          echo "| AAR Generation | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## Generated Artifacts" >> $GITHUB_STEP_SUMMARY
-        
-        # 列出生成的AAR文件
-        MEDIA_PATH="${{ env.MEDIA_PATH }}"
-        
-        echo "### AV1 Extension" >> $GITHUB_STEP_SUMMARY
-        if [ -d "$MEDIA_PATH/libraries/decoder_av1/build/outputs/aar" ]; then
-          for aar in "$MEDIA_PATH"/libraries/decoder_av1/build/outputs/aar/*.aar; do
-            if [ -f "$aar" ]; then
-              filename=$(basename "$aar")
-              size=$(ls -lh "$aar" | awk '{print $5}')
-              echo "- **$filename** ($size)" >> $GITHUB_STEP_SUMMARY
-            fi
-          done
-        else
-          echo "No AAR files found for AV1 extension." >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### FFmpeg Extension" >> $GITHUB_STEP_SUMMARY
-        if [ -d "$MEDIA_PATH/libraries/decoder_ffmpeg/build/outputs/aar" ]; then
-          for aar in "$MEDIA_PATH"/libraries/decoder_ffmpeg/build/outputs/aar/*.aar; do
-            if [ -f "$aar" ]; then
-              filename=$(basename "$aar")
-              size=$(ls -lh "$aar" | awk '{print $5}')
-              echo "- **$filename** ($size)" >> $GITHUB_STEP_SUMMARY
-            fi
-          done
-        else
-          echo "No AAR files found for FFmpeg extension." >> $GITHUB_STEP_SUMMARY
-        fi
-        
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## Next Steps" >> $GITHUB_STEP_SUMMARY
-        echo "1. Download the AAR artifacts from the Artifacts section above" >> $GITHUB_STEP_SUMMARY
-        echo "2. Add the AAR files to your Android project's `libs` directory" >> $GITHUB_STEP_SUMMARY
-        echo "3. Update your `build.gradle` to include the AAR dependencies" >> $GITHUB_STEP_SUMMARY
-        
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "*Build completed with status: ${{ job.status }}*" >> $GITHUB_STEP_SUMMARY
