--- a/.github/workflows/build-media3-av1-decoder.yml
+++ b/.github/workflows/build-media3-av1-decoder.yml
@@ -178,3 +178,52 @@ jobs:
             media/libraries/decoder_av1/buildout/outputs/aar/*
           draft: false
           prerelease: false
+
+      - name: Push av1 aar to bv-libs repository
+        env:
+          TARGET_REPO: zxgv5/bv-libs
+        run: |
+          # 设置 Git 配置
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          
+          # 克隆目标仓库
+          cd "$GITHUB_WORKSPACE"
+          git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ env.TARGET_REPO }}.git target-repo
+          cd target-repo
+          
+          # 复制新的 AAR 文件到目标位置
+          SOURCE_AAR="$GITHUB_WORKSPACE/media/libraries/decoder_av1/buildout/outputs/aar/lib-decoder-av1-release.aar"
+          TARGET_DIR="av1Decoder"
+          
+          if [ -f "$SOURCE_AAR" ]; then
+            echo "Found AAR file: $SOURCE_AAR"
+            
+            # 确保目标目录存在
+            mkdir -p "$TARGET_DIR"
+            
+            # 备份旧文件（可选）
+            if [ -f "$TARGET_DIR/lib-decoder-av1-release.aar" ]; then
+              TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
+              cp "$TARGET_DIR/lib-decoder-av1-release.aar" "$TARGET_DIR/lib-decoder-av1-release_${TIMESTAMP}.aar.backup"
+            fi
+            
+            # 复制新文件
+            cp "$SOURCE_AAR" "$TARGET_DIR/"
+            
+            # 提交更改
+            git add "$TARGET_DIR/lib-decoder-av1-release.aar"
+            
+            # 检查是否有更改
+            if git diff --cached --quiet; then
+              echo "No changes to commit."
+            else
+              git commit -m "Update AV1 decoder AAR - ${{ env.BUILD_DATE }}"
+              git push origin main
+              echo "Successfully pushed AV1 decoder AAR to ${{ env.TARGET_REPO }}"
+            fi
+          else
+            echo "Error: AAR file not found at $SOURCE_AAR"
+            ls -la "$(dirname "$SOURCE_AAR")"
+            exit 1
+          fi
