--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -6,6 +6,7 @@ on:
  
 env:
   SOURCE_REPO: 'https://github.com/videolan/vlc-android.git'
+  SOURCE_BRANCH: 'libvlc-3.6.5'
   BUILD_DIR: 'vlc-android-source'
   GRADLE_VERSION: '8.13'
  
@@ -25,23 +26,12 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
-      - name: Cache gradle and ndk
-        uses: actions/cache@main
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-            ${{ env.BUILD_DIR }}/vlc/contrib-* # VLC 贡献库的编译缓存
-          key: ${{ runner.os }}-gradle-ndk-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-ndk-
-
       - name: Clone source repository
         run: |
           echo "Cloning source repository..."
           # 使用更彻底的清理，避免残留文件导致问题
           rm -rf "${{ env.BUILD_DIR }}"
-          git clone --depth 1 --branch "${{ github.event.inputs.source_branch }}" "${{ env.SOURCE_REPO }}" "${{ env.BUILD_DIR }}"
+          git clone --depth 1 --branch "${{ env.SOURCE_BRANCH }}" "${{ env.SOURCE_REPO }}" "${{ env.BUILD_DIR }}"
 
       - name: Setup java 17
         uses: actions/setup-java@main
