--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -19,6 +19,13 @@ jobs:
           # 清理可能存在的全局缓存文件
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
+ 
+       # 检出ci仓库，以便在runner中调用sh脚本
+      - name: Checkout ci source repo (self)
+        uses: actions/checkout@main
+        with:
+          # 指定一个子目录放ci仓库，避免与源仓库混淆
+          path: android-ci-source
 
       # 并行克隆两个仓库
       - name: Checkout source repo (fantasy-bv)
@@ -40,6 +47,11 @@ jobs:
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+
+      - name: Run customize scripts
+        run: |
+          chmod +x $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
+          $GITHUB_WORKSPACE/android-ci-source/scripts/customize-bv-fantasy.sh
 
       # 从Monorepo精确合并每个库（核心改进）
       - name: Merge libraries from monorepo structure
@@ -105,26 +117,19 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
 
-      - name: Setup android sdk (minimal)
-        uses: android-actions/setup-android@main
-        with:
-          api-level: ${{ env.ANDROID_COMPILE_SDK }}
-          build-tools: ${{ env.ANDROID_BUILD_TOOLS }}
-          accept-android-sdk-licenses: true
-
       # 应用项目特定配置
-      - name: Fix app version calculation
-        working-directory: ./fantasy-bv-source
-        run: |
-          config_file="buildSrc/src/main/kotlin/AppConfiguration.kt"
-          if [ -f "$config_file" ]; then
-            echo "正在修改版本号计算规则 (git commit计数 + 1)..."
-            sed -i.bak 's/"git rev-list --count HEAD".exec().toInt() - 5/"git rev-list --count HEAD".exec().toInt() + 1/' "$config_file"
-            echo "修改后 versionCode 定义:"
-            grep -A2 -B2 "versionCode.*by lazy" "$config_file"
-          else
-            echo "警告: 未找到 $config_file，跳过版本修改。"
-          fi
+      # - name: Fix app version calculation
+      #   working-directory: ./fantasy-bv-source
+      #   run: |
+      #     config_file="buildSrc/src/main/kotlin/AppConfiguration.kt"
+      #     if [ -f "$config_file" ]; then
+      #       echo "正在修改版本号计算规则 (git commit计数 + 1)..."
+      #       sed -i.bak 's/"git rev-list --count HEAD".exec().toInt() - 5/"git rev-list --count HEAD".exec().toInt() + 1/' "$config_file"
+      #       echo "修改后 versionCode 定义:"
+      #       grep -A2 -B2 "versionCode.*by lazy" "$config_file"
+      #     else
+      #       echo "警告: 未找到 $config_file，跳过版本修改。"
+      #     fi
  
       # 验证与准备构建
       - name: Validate final project structure
