--- a/.github/workflows/build-apk-frost819-bv.yml
+++ b/.github/workflows/build-apk-frost819-bv.yml
@@ -22,7 +22,7 @@ jobs:
 
       # 检出ci仓库，以便在runner中调用sh脚本
       - name: Checkout ci source repo (self)
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
         with:
           # 指定一个子目录放ci仓库，避免与源仓库混淆
           path: android-ci-source
